--- a/sign-up.html
+++ b/sign-up.html
@@ -48,11 +48,11 @@
      </form>
        <div class="form-social">
           <button class="form-social__btn">
-            <img src="img/Facebook Icon.png" alt="facbook"/>
+            <img src="img/icons/Facebook Icon.png" alt="facbook"/>
             Facebook
           </button>
           <button class="form-social__btn">
-            <img src="img/Google Icon.png" alt="google">
+            <img src="img/icons/Google Icon.png" alt="google">
             Google
           </button>
         </div>
