--- a/login.html
+++ b/login.html
@@ -38,11 +38,11 @@
      </form>
        <div class="form-social">
           <button class="form-social__btn">
-            <img src="img/Facebook Icon.png" alt="facbook"/>
+            <img src="img/icons/Facebook Icon.png" alt="facbook"/>
            <span>Facebook</span>
           </button>
           <button class="form-social__btn">
-            <img src="img/Google Icon.png" alt="google">
+            <img src="img/icons/Google Icon.png" alt="google">
            <span>Google</span> 
           </button>
         </div>
