--- a/reset.html
+++ b/reset.html
@@ -34,7 +34,7 @@
 
    </div>
 
-   <div class="illustraion-section">
+   <div class="illustration-section">
      <img src="img/Illustration.png" class="img-responsive"/>
    </div>
    
