finshed the login and sign-up process to the dashboard

--- a/dashoard.html
+++ b/dashoard.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!--icon in title-->
     <link rel="icon" type="image/svg" href="img/obodo.svg">
+    <!--css-->
     <link rel="stylesheet" href="asset/css/dashboard.css">
     <title>Obodo |  Dashboard</title>
     <!--script type="module" src="src/dashboard.js"></script-->
@@ -14,15 +20,14 @@
         <!--top nav-->
         <nav>
             <span class="logo">
+                <!-- use an image tag-->
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.7406 18.3705H21.4812C21.4816 13.134 17.2366 8.88892 12 8.88892V13.6295C14.6181 13.6295 16.7406 15.7521 16.7406 18.3705Z" fill="#3F69FF"/>
                     <path d="M12 23.1112C14.6181 23.1112 16.7406 20.9886 16.7406 18.3705H12V23.1112Z" fill="#10E8F9"/>
                     <path d="M16.7406 18.3706C16.7406 15.7525 14.6181 13.6299 12 13.6299V18.3706H16.7406Z" fill="#0138C5"/>
                     <rect x="0.5" y="0.5" width="31" height="31" rx="15.5" stroke="#EBEBEB"/>
                 </svg>
-                <h2>
-                    Plogged
-                </h2>
+                <h3>Community Name</h3>
                 <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.294066 0.292745C0.684735 -0.0976973 1.318 -0.0975648 1.70851 0.293041L7.00101 5.58689L12.2959 0.292894C12.6865 -0.0976306 13.3197 -0.0976305 13.7103 0.292894C14.1009 0.683418 14.1009 1.31658 13.7103 1.70711L7.70809 7.70836C7.52049 7.89592 7.26606 8.00128 7.00076 8.00125C6.73546 8.00123 6.48105 7.89581 6.29349 7.70821L0.29377 1.70696C-0.0967367 1.31635 -0.0966042 0.683188 0.294066 0.292745Z" fill="#99999D"/>
                 </svg>
@@ -36,11 +41,49 @@
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M6.78066 1.66417C5.82994 1.77604 4.95252 2.23063 4.31302 2.94294C3.67047 3.65865 3.31271 4.58487 3.30732 5.54633V6.10426L3.30732 6.10561C3.30651 6.50326 3.18711 6.89161 2.96442 7.22104C2.74184 7.55031 2.42618 7.80576 2.05778 7.95484C1.94273 8.00161 1.84422 8.08147 1.77472 8.18424C1.70538 8.28676 1.66803 8.40748 1.66732 8.53114C1.66768 8.83091 1.78697 9.11838 1.99915 9.33046C2.21167 9.54288 2.49997 9.66227 2.80065 9.66227H11.2007C11.5013 9.66227 11.7896 9.54288 12.0022 9.33046C12.2147 9.11806 12.334 8.83004 12.334 8.52978V8.52461C12.3349 8.40108 12.2993 8.28001 12.2315 8.17665C12.1643 8.07413 12.0684 7.99356 11.9557 7.94498C11.5911 7.7941 11.2792 7.53873 11.0594 7.21093C10.8386 6.88162 10.7206 6.49409 10.7207 6.0976V5.35848C10.7202 4.85134 10.6157 4.34968 10.4134 3.88458C10.2111 3.41947 9.9154 3.00081 9.54461 2.65455C9.17381 2.30828 8.73581 2.04179 8.25774 1.8716C7.78448 1.70312 7.28195 1.63257 6.78066 1.66417ZM6.67596 0.334831C7.36436 0.288575 8.05494 0.384097 8.70491 0.615487C9.35489 0.846877 9.95043 1.20921 10.4546 1.68006C10.9588 2.1509 11.361 2.72024 11.6361 3.35279C11.9112 3.98535 12.0534 4.66765 12.054 5.35741V6.0976C12.054 6.2296 12.0932 6.35863 12.1668 6.46832C12.2404 6.57802 12.3449 6.66343 12.4672 6.71365L12.475 6.71687C12.8311 6.86836 13.1343 7.12188 13.3465 7.44541C13.5582 7.76819 13.6698 8.14628 13.6673 8.53225C13.6667 9.18544 13.4068 9.81167 12.9447 10.2735C12.4821 10.7359 11.8547 10.9956 11.2007 10.9956H2.80065C2.14655 10.9956 1.51918 10.7359 1.05657 10.2735C0.593941 9.81109 0.333984 9.18386 0.333984 8.52978V8.52723C0.335472 8.1386 0.452535 7.75921 0.67025 7.43729C0.887962 7.11537 1.19648 6.86547 1.55656 6.7193L1.55742 6.71896C1.68035 6.66925 1.78561 6.58406 1.85979 6.47433C1.93387 6.36475 1.97361 6.23564 1.97398 6.10346V5.54106C1.98067 4.2525 2.45992 3.01117 3.32087 2.0522C4.18181 1.09324 5.36466 0.483219 6.64533 0.337599C6.65552 0.336441 6.66573 0.335518 6.67596 0.334831ZM5.28815 11.7797C5.591 11.5702 6.00625 11.646 6.21566 11.9488C6.29154 12.0586 6.39574 12.1458 6.51725 12.2012C6.52601 12.2052 6.53468 12.2094 6.54326 12.2137C6.75374 12.321 6.99526 12.3508 7.22555 12.298C7.45584 12.2452 7.66016 12.1132 7.8028 11.9251C8.0253 11.6318 8.44348 11.5743 8.73684 11.7968C9.0302 12.0193 9.08766 12.4375 8.86516 12.7309C8.53345 13.1682 8.05849 13.475 7.52342 13.5977C6.99298 13.7192 6.43688 13.6522 5.95076 13.4082C5.61612 13.2528 5.32893 13.0108 5.11898 12.7072C4.90957 12.4043 4.98531 11.9891 5.28815 11.7797Z" fill="#99999D"/>
                     </svg>
-                    10
+                    0
                 </span>
-                <img src="img/avarter-img/avatar-square-1 1.png" alt=""/>
+
+                <!--button for drop down -->
+                <img src="img/avarter-img/avatar-square-1 1.png" tabindex="1" alt=""/>
+
+                <!--drop down-->
+                <div class="drop-down">
+                    <div class="drop-down_header">
+                        <img src="img/avarter-img/avatar-square-1 1.png" alt=""/>
+                        <div class="user-name_email">
+                            <h4 class="name">Name</h4>
+                            <p class="userEmail">Email</p>
+                        </div>
+                    </div>
+                    <div class="drop-down_body">
+                    <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="img/icons/person.svg" alt=""/>
+                                    profile
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="img/icons/settings.svg" alt=""/>
+                                    settings
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="drop-down_footer">
+                        <a>
+                            <img src="img/icons/sign-out.svg" alt=""/>
+                            sign out
+                        </a>
+                    </div>
+                </div>
             </div>
+            
         </nav>
+
+
     </header>
 
     <main>
@@ -48,7 +91,11 @@
         <aside>
             <ul>
                 <li>
-                    <a href="#"><img src="img/icons/dashboard.svg" alt="dashborad"/>Dashboard</a>
+                    <a href="#">
+                        <svg width="17" height="18" viewBox="0 0 17 18"  xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.166992 3.58335C0.166992 1.97252 1.47283 0.666687 3.08366 0.666687H4.75033C6.36116 0.666687 7.66699 1.97252 7.66699 3.58335V5.25002C7.66699 6.86085 6.36116 8.16669 4.75033 8.16669H3.08366C1.47283 8.16669 0.166992 6.86085 0.166992 5.25002V3.58335ZM3.08366 2.33335C2.3933 2.33335 1.83366 2.893 1.83366 3.58335V5.25002C1.83366 5.94038 2.3933 6.50002 3.08366 6.50002H4.75033C5.44068 6.50002 6.00033 5.94038 6.00033 5.25002V3.58335C6.00033 2.893 5.44068 2.33335 4.75033 2.33335H3.08366ZM9.33366 3.58335C9.33366 1.97252 10.6395 0.666687 12.2503 0.666687H13.917C15.5278 0.666687 16.8337 1.97252 16.8337 3.58335V5.25002C16.8337 6.86085 15.5278 8.16669 13.917 8.16669H12.2503C10.6395 8.16669 9.33366 6.86085 9.33366 5.25002V3.58335ZM12.2503 2.33335C11.56 2.33335 11.0003 2.893 11.0003 3.58335V5.25002C11.0003 5.94038 11.56 6.50002 12.2503 6.50002H13.917C14.6073 6.50002 15.167 5.94038 15.167 5.25002V3.58335C15.167 2.893 14.6073 2.33335 13.917 2.33335H12.2503ZM0.166992 12.75C0.166992 11.1392 1.47283 9.83335 3.08366 9.83335H4.75033C6.36116 9.83335 7.66699 11.1392 7.66699 12.75V14.4167C7.66699 16.0275 6.36116 17.3334 4.75033 17.3334H3.08366C1.47283 17.3334 0.166992 16.0275 0.166992 14.4167V12.75ZM3.08366 11.5C2.3933 11.5 1.83366 12.0597 1.83366 12.75V14.4167C1.83366 15.107 2.3933 15.6667 3.08366 15.6667H4.75033C5.44068 15.6667 6.00033 15.107 6.00033 14.4167V12.75C6.00033 12.0597 5.44068 11.5 4.75033 11.5H3.08366ZM9.33366 12.75C9.33366 11.1392 10.6395 9.83335 12.2503 9.83335H13.917C15.5278 9.83335 16.8337 11.1392 16.8337 12.75V14.4167C16.8337 16.0275 15.5278 17.3334 13.917 17.3334H12.2503C10.6395 17.3334 9.33366 16.0275 9.33366 14.4167V12.75ZM12.2503 11.5C11.56 11.5 11.0003 12.0597 11.0003 12.75V14.4167C11.0003 15.107 11.56 15.6667 12.2503 15.6667H13.917C14.6073 15.6667 15.167 15.107 15.167 14.4167V12.75C15.167 12.0597 14.6073 11.5 13.917 11.5H12.2503Z" />
+                        </svg>Dashboard
+                    </a>
                 </li>
                 <li>
                     <a href="#"><img src="img/icons/group.svg" alt="dashborad"/>Members</a>
@@ -66,15 +113,19 @@
 
             <div class="mask-group">
                 <img src="img/Mask Group.svg" alt="">
-                <p>
-                    Upgrade to Premium to get all the features
-                </p>
-                <button class="btn btn-active">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C8.55228 0 9 0.447715 9 1V7H15C15.5523 7 16 7.44772 16 8C16 8.55228 15.5523 9 15 9H9V15C9 15.5523 8.55228 16 8 16C7.44772 16 7 15.5523 7 15V9H1C0.447715 9 0 8.55228 0 8C0 7.44772 0.447715 7 1 7H7V1C7 0.447715 7.44772 0 8 0Z" fill="white"/>
-                    </svg>
-                    Upgrade
-                </button>
+
+                <div class="mask-group_body">
+                    <p>
+                        Upgrade to Premium to get all the features
+                    </p>
+                    <button class="btn btn-active">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C8.55228 0 9 0.447715 9 1V7H15C15.5523 7 16 7.44772 16 8C16 8.55228 15.5523 9 15 9H9V15C9 15.5523 8.55228 16 8 16C7.44772 16 7 15.5523 7 15V9H1C0.447715 9 0 8.55228 0 8C0 7.44772 0.447715 7 1 7H7V1C7 0.447715 7.44772 0 8 0Z" fill="white"/>
+                        </svg>
+                        Upgrade
+                    </button>
+                </div>
+                
             </div>
         </aside>
         <!--center of the page-->
@@ -82,7 +133,7 @@
 
             <div>
                 <div class="header-text">
-                    <h2>Hello, Drewee</h2>
+                    <h2>hello user</h2>
                     <p>Welcome to Obodo. You can now manage and host your community like never before.</p>
                 </div>
                 <div class="set-up-check-list">
@@ -92,7 +143,7 @@
                         <p>Get your account ready to manage and host your community.</p>
                     </div>
 
-                    <div class="to-do">
+                    <a href="#" class="to-do">
                         <span class="circle"></span>
                         <span>Complete your profile</span>
                         <span>
@@ -100,9 +151,9 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.03 0.861851C5.2904 0.601555 5.71251 0.601644 5.9728 0.862048L10.6385 5.52969C10.8988 5.79006 10.8987 6.21209 10.6384 6.4724L5.97271 11.1381C5.71236 11.3984 5.29025 11.3984 5.0299 11.1381C4.76955 10.8777 4.76955 10.4556 5.0299 10.1953L8.55752 6.66766H0.833659C0.465469 6.66766 0.166992 6.36919 0.166992 6.001C0.166992 5.63281 0.465469 5.33433 0.833659 5.33433H8.55799L5.0298 1.80466C4.7695 1.54426 4.76959 1.12215 5.03 0.861851Z" fill="#99999D"/>
                             </svg>
                         </span>
-                    </div>
+                    </a>
 
-                    <div class="to-do">
+                    <a href="#" class="to-do">
                         <span class="circle"></span>
                         <span>Invite members</span>
                         <span>
@@ -110,9 +161,9 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.03 0.861851C5.2904 0.601555 5.71251 0.601644 5.9728 0.862048L10.6385 5.52969C10.8988 5.79006 10.8987 6.21209 10.6384 6.4724L5.97271 11.1381C5.71236 11.3984 5.29025 11.3984 5.0299 11.1381C4.76955 10.8777 4.76955 10.4556 5.0299 10.1953L8.55752 6.66766H0.833659C0.465469 6.66766 0.166992 6.36919 0.166992 6.001C0.166992 5.63281 0.465469 5.33433 0.833659 5.33433H8.55799L5.0298 1.80466C4.7695 1.54426 4.76959 1.12215 5.03 0.861851Z" fill="#99999D"/>
                             </svg>
                         </span>
-                    </div>
+                    </a>
 
-                    <div class="to-do">
+                    <a href="#" class="to-do">
                         <span class="circle"></span>
                         <span>Host your first event </span>
                         <span>
@@ -120,7 +171,7 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.03 0.861851C5.2904 0.601555 5.71251 0.601644 5.9728 0.862048L10.6385 5.52969C10.8988 5.79006 10.8987 6.21209 10.6384 6.4724L5.97271 11.1381C5.71236 11.3984 5.29025 11.3984 5.0299 11.1381C4.76955 10.8777 4.76955 10.4556 5.0299 10.1953L8.55752 6.66766H0.833659C0.465469 6.66766 0.166992 6.36919 0.166992 6.001C0.166992 5.63281 0.465469 5.33433 0.833659 5.33433H8.55799L5.0298 1.80466C4.7695 1.54426 4.76959 1.12215 5.03 0.861851Z" fill="#99999D"/>
                             </svg>
                         </span>
-                    </div>
+                    </a>
 
                 </div>
 
