--- a/first-action.html
+++ b/first-action.html
@@ -47,7 +47,7 @@
                 <label for="members-btn">What do you want to do first?</label>
             <div class="todo">
 
-               <div class="todo-actions">
+               <a href="#" class="todo-actions">
 
                     <div>
                         <img src="img/icons/group.svg" alt="img"/>
@@ -64,9 +64,9 @@
                         </svg>
                     </span>
 
-               </div>
+               </a>
 
-                <div class="todo-actions">
+                <a href="#" class="todo-actions">
 
                     <div>
                         <img src="img/icons/Vector (Stroke).svg" alt="img"/>
@@ -83,9 +83,9 @@
                         </svg>
                     </span>
 
-                </div>
+                </a>
 
-                <div class="todo-actions">
+                <a href="dashoard.html" class="todo-actions">
 
                     <div>
                         <img src="img/icons/dashboard.svg" alt="img"/>
@@ -101,13 +101,13 @@
                         </svg>
                     </span>
 
-                </div>
+                </a>
 
             </div>
 
             <div class="btn-links">
-                <a class="active" href="#" >Continue</a>
-                <a href="#">skip</a>
+                <a class="active" href="dashoard.html" >Continue</a>
+                <a href="dashboard.html">skip</a>
             </div>
                 
             </div>
