load screen and cusor change

--- a/login.html
+++ b/login.html
@@ -50,7 +50,14 @@
             <input type="password" name="password" id="password" placeholder="Password"/>
         </div>
 
-        <button class="btn btn-form__submit">login</button>
+        <button class="btn btn-form__submit">
+         <span>login</span> 
+          <!--loading-->
+          <svg class="spinner" style="display: none;" viewBox="0 0 50 50">
+            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+          </svg>
+
+        </button>
        
         <div class="main-signUp__text ">
             <p>or login with</p>
