--- a/member.html
+++ b/member.html
@@ -54,7 +54,13 @@
 
             </div>
             <div class="btn-links">
-                <a class="active" href="#" >Continue</a>
+                <a class="active" >
+                  <span>Continue</span>            
+                  <!--loading-->
+                 <svg class="spinner" style="display: none;" viewBox="0 0 50 50">
+                   <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+                 </svg>
+                </a>
                 <a href="intrested.html">skip</a>
             </div>
             </div>
