--- a/sign-up.html
+++ b/sign-up.html
@@ -62,7 +62,14 @@
               By signing up you agree to our<u> Terms of Use</u> and <u>Privacy Policy</u>.
           </div>
 
-        <button class="btn btn-form__submit">Sign up</button>
+        <button class="btn btn-form__submit">
+          <span>Sign up</span>
+          <!--loading-->
+          <svg class="spinner" style="display: none;" viewBox="0 0 50 50">
+            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+          </svg>
+
+        </button>
        
         <div class="main-signUp__text ">
             <p>or sign up with</p>
