--- a/name-entery.html
+++ b/name-entery.html
@@ -56,7 +56,15 @@
                   <span>.obodo.com</span>
                 </div>
                 <div class="btn-links">
-                  <a class="def">Continue</a>
+                  <a class="def">
+                    <span>Continue</span>
+                    
+                     <!--loading-->
+                    <svg class="spinner" style="display: none;" viewBox="0 0 50 50">
+                      <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+                    </svg>
+
+                  </a>
               </div>
             </div>
               
