--- a/dashoard.html
+++ b/dashoard.html
@@ -27,7 +27,7 @@
                     <path d="M16.7406 18.3706C16.7406 15.7525 14.6181 13.6299 12 13.6299V18.3706H16.7406Z" fill="#0138C5"/>
                     <rect x="0.5" y="0.5" width="31" height="31" rx="15.5" stroke="#EBEBEB"/>
                 </svg>
-                <h3>Community Name</h3>
+                <h3></h3>
                 <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.294066 0.292745C0.684735 -0.0976973 1.318 -0.0975648 1.70851 0.293041L7.00101 5.58689L12.2959 0.292894C12.6865 -0.0976306 13.3197 -0.0976305 13.7103 0.292894C14.1009 0.683418 14.1009 1.31658 13.7103 1.70711L7.70809 7.70836C7.52049 7.89592 7.26606 8.00128 7.00076 8.00125C6.73546 8.00123 6.48105 7.89581 6.29349 7.70821L0.29377 1.70696C-0.0967367 1.31635 -0.0966042 0.683188 0.294066 0.292745Z" fill="#99999D"/>
                 </svg>
@@ -52,8 +52,8 @@
                     <div class="drop-down_header">
                         <img src="img/avarter-img/avatar-square-1 1.png" alt=""/>
                         <div class="user-name_email">
-                            <h4 class="name">Name</h4>
-                            <p class="userEmail">Email</p>
+                            <h4 class="name"></h4>
+                            <p class="userEmail"></p>
                         </div>
                     </div>
                     <div class="drop-down_body">
@@ -133,7 +133,7 @@
 
             <div>
                 <div class="header-text">
-                    <h2>hello user</h2>
+                    <h2>hello</h2>
                     <p>Welcome to Obodo. You can now manage and host your community like never before.</p>
                 </div>
                 <div class="set-up-check-list">
